[package]
name = "rrt_star"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
target-cpu = "native"
panic = "abort"
strip = true

# Enable fat LTO for better cross-module optimization
[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3